package com.directi.training.isp.exercise;

public interface IProximity
{
    void proximityCallback();
}
