package com.directi.training.isp.exercise;

public interface ITimeout
{
    void timeOutCallback();
}
